Adicionado e implementado a comunicacao das nfe e nfc-e

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.jpa.open-in-view= true
 
 # THYMELEAF
 spring.thymeleaf.cache= false
+
+nfe.estado=PR
+nfe.ambiente=HOMOLOGACAO
+nfe.certificado.caminho=C:/Users/cleit/Documents/Certificado Panificadora/PANIFICADORA TRENTIN LTDA 07-08-2026 (1).pfx
+nfe.certificado.senha=10203040
+nfe.nfce.id-csc=000001
+nfe.nfce.csc=SEU_CSC_AQUI
